--- a/harp_apps/dashboard/frontend/index.html
+++ b/harp_apps/dashboard/frontend/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
 
     <link rel="icon" type="image/svg+xml" href="/harp.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Harp UI</title>
+    <title>Harp</title>
   </head>
   <body>
     <div id="root"></div>
